created past, present and future blocks

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         -->
 
       <!-- Time block for 9am -->
-<div id="hour-9" class="row time-block">
+<div id="hour-9" class="row time-block past">
   <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
   <textarea class="col-8 col-md-10 description" rows="3"></textarea>
   <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -49,7 +49,7 @@
 </div>
 
 <!-- Time block for 10am -->
-<div id="hour-10" class="row time-block">
+<div id="hour-10" class="row time-block past">
   <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
   <textarea class="col-8 col-md-10 description" rows="3"></textarea>
   <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -58,7 +58,7 @@
 </div>
 
 <!-- Time block for 11am -->
-<div id="hour-11" class="row time-block">
+<div id="hour-11" class="row time-block past">
   <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
   <textarea class="col-8 col-md-10 description" rows="3"></textarea>
   <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -67,7 +67,7 @@
 </div>
 
 <!-- Time block for 12pm -->
-<div id="hour-12" class="row time-block">
+<div id="hour-12" class="row time-block present">
   <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
   <textarea class="col-8 col-md-10 description" rows="3"></textarea>
   <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -76,7 +76,7 @@
 </div>
 
 <!-- Time block for 1pm -->
-<div id="hour-13" class="row time-block">
+<div id="hour-13" class="row time-block future">
   <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
   <textarea class="col-8 col-md-10 description" rows="3"></textarea>
   <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -85,7 +85,7 @@
 </div>
 
 <!-- Time block for 2pm -->
-<div id="hour-14" class="row time-block">
+<div id="hour-14" class="row time-block future">
   <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
   <textarea class="col-8 col-md-10 description" rows="3"></textarea>
   <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -94,7 +94,7 @@
 </div>
 
 <!-- Time block for 3pm -->
-<div id="hour-15" class="row time-block">
+<div id="hour-15" class="row time-block future">
   <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
   <textarea class="col-8 col-md-10 description" rows="3"></textarea>
   <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -103,7 +103,7 @@
 </div>
 
 <!-- Time block for 4pm -->
-<div id="hour-16" class="row time-block">
+<div id="hour-16" class="row time-block future">
   <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
   <textarea class="col-8 col-md-10 description" rows="3"></textarea>
   <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -112,7 +112,7 @@
 </div>
 
 <!-- Time block for 5pm -->
-<div id="hour-17" class="row time-block">
+<div id="hour-17" class="row time-block future">
   <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
   <textarea class="col-8 col-md-10 description" rows="3"></textarea>
   <button class="btn saveBtn col-2 col-md-1" aria-label="save">
